# lzy-codec-py

./: .gitignore  README.md  setup.cfg
src/lzy_codec/: __init__.py  lzy.py
