[metadata]
name = lzy_codec
version = 0.1.1
author = Li ZongYing
author_email = lizongying@msn.com
description = 一種變長文本編解碼方案，支持對Unicode進行編解碼。編解碼效率、存儲空間全面優於UTF-8，未來會替代UTF-8成為新的世界通用編解碼標準。
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lizongying/lzy-codec-py
project_urls =
    Bug Tracker = https://github.com/lizongying/lzy-codec-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src